# oqarina

./: .gitignore  CODING_GUIDELINES.md  CONTRIBUTORS  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  TODO.md  _CoqProject  coq-oqarina.opam  dune-project
.github/workflows/: main.yml
aadl_semantics/Coq/: .gitignore  CODING_GUIDELINES.md  Makefile  README.md  _CoqProject  aadl.v  utils.v
aadl_semantics/Coq/latex-src/: README (USAGE).txt  SEIreport-old.sty  SEIreport.sty  aadl_macros.tex  bibliography.bib  techreport.tex
aadl_semantics/Coq/parser/: README.md
aadl_semantics/Coq/src/: README.md  aadl.v  aadl_aadl_project.v  aadl_communication_properties.v  aadl_decl.v  aadl_declarative.v  aadl_dynamic_system.v  aadl_dynamic_thread.v  aadl_instance.v  aadl_static_thread.v  aadl_system.v  aadl_thread_properties.v  aadl_wf.v  extraction.v  identifiers.v  utils.v
docs/: bibliography.bib  conf.py  docutils.conf  examples.rst  index.rst  pygments.sty
docs/coq/: 3rd-party__aadl2prosa.v.rst  AADL__Kernel_all.v.rst  AADL__Kernel_categories.v.rst  AADL__Kernel_component.v.rst  AADL__Kernel_components_helper.v.rst  AADL__Kernel_features_helper.v.rst  AADL__Kernel_notations.v.rst  AADL__Kernel_package.v.rst  AADL__Kernel_properties.v.rst  AADL__Kernel_properties_helper.v.rst  AADL__Kernel_typecheck.v.rst  AADL__all.v.rst  AADL__behavior_all.v.rst  AADL__behavior_port_variable.v.rst  AADL__behavior_system.v.rst  AADL__behavior_thread.v.rst  AADL__declarative_all.v.rst  AADL__declarative_declarative_model.v.rst  AADL__declarative_implementation.v.rst  AADL__declarative_refinement.v.rst  AADL__full_example.v.rst  AADL__instance_all.v.rst  AADL__instance_instance_model.v.rst  AADL__legality_all.v.rst  AADL__legality_categories_wf.v.rst  AADL__legality_component_wf.v.rst  AADL__legality_connections_wf.v.rst  AADL__legality_features_wf.v.rst  AADL__legality_properties_wf.v.rst  AADL__resolute_all.v.rst  AADL__resolute_resolute.v.rst  Categories__all.v.rst  Categories__aut.v.rst  Categories__beh.v.rst  Categories__family.v.rst  Categories__interface.v.rst  Categories__wiring_rel.v.rst  CoqExt__Category_Ext.v.rst  CoqExt__Classes.v.rst  CoqExt__PeanoNat_Ext.v.rst  (+26 more)
examples/: README.md  dune
examples/AADL/: basic_example.v  full_example.v
examples/DEVS/: ping_pong.v  traffic_light.v
examples/FaultTrees/: FaultTrees_Examples.v
extraction/: Makefile  dune  extraction.v
parser/: Makefile  README.md  parser.vy
parser/tests/: ping-local_PING_Local_Instance.instance  ping_PING_Native_Instance.instance  test_1.aadl
src/: Configuration.v  README.md  aadl.v  aadl_aadl_project.v  aadl_categories.v  aadl_communication_properties.v  aadl_declarative.v  aadl_dynamic_system.v  aadl_dynamic_thread.v  aadl_feature_helper.v  aadl_instance.v  aadl_port_variable.v  aadl_static_thread.v  aadl_thread_properties.v  aadl_timing_properties.v  aadl_wf.v  cpdttactics.v  dune  threadMonad.v
src/AADL/: all.v
src/AADL/Kernel/: all.v  categories.v  component.v  components_helper.v  features_helper.v  notations.v  package.v  properties.v  properties_helper.v  typecheck.v  typing_test.v
src/AADL/atin_frontend/: Makefile  atin_frontend.v  atin_lexer.v  atin_parser.vy  test_parser.v
src/AADL/behavior/: all.v  port_variable.v  system.v  thread.v
src/Categories/: all.v  aut.v  beh.v  family.v  family_finset.v  family_listset.v  interface.v  interface_stdpp.v  wiring_rel.v
src/CoqExt/: Category_ext.v  Classes.v  PeanoNat_Ext.v  Reflexive_Transitive_Closure_Ext.v  all.v  finset_Ext.v  strong_ind.v
src/MoC/: ravenscar.v
src/coq_utils/: all.v  list_utils.v  monad_ext.v  parser_utils.v  sumbool_utils.v  utils.v
src/core/: all.v  identifiers.v  maps.v  queue.v  tactics.v  time.v
src/formalisms/: actor.v  all.v  devs_classic.v  devs_coupled.v  dune  lts.v
src/parsers/: Lexer.v  Makefile  Parser.vy  aadl_frontend.v  aadl_lexer.v  aadl_parser.v  aadl_parser.vy  test_parser.v
src/properties/: _CoqProject  all.v  extraction.v  identifiers.v  properties.v  properties_helper.v  typecheck.v  typing_test.v
src/property_sets/: aadl_aadl_project.v  aadl_communication_properties.v  aadl_thread_properties.v  aadl_timing_properties.v  all.v
src/tactics/: cpdttactics.v  oq_tactics.v
testsuite/: Makefile  README.md  car.impl.json  dune  rma.impl.json  system_mini.impl.json  test01.instance  test02.instance
testsuite/aadl/: Makefile  Makefile.common
testsuite/oqarina/: test_aadl2devs.v  test_identifiers.v  test_json.v  test_property_typing.v
tools/: deps.sh  license-header.txt
(+82 files in other folders)
