;; Disable warnings as errors
(env
  (dev
    (flags (:standard -warn-error -a+31))))

;; Extract the main module
(coq.extraction
 (prelude extraction)
 (extracted_modules main)
 (theories Oqarina))

;; Define the executable from this module
;; XXX This part is disabled for now, dune does not find all dependencies while ocamlbuild does. To be investigated.
;;(executable
;; (name main)
;; (public_name main)
;; (libraries unix))